syntax = "proto3";

package trpc.test.helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
  int32 age = 2;
  repeated string hobby = 3;
}

message HelloReply {
  string name = 1;
  int32 age = 2;
  repeated string hobby = 3;
}